@@ -1,3 +1,8 @@
+Changes in @NEW@:
+  o Client Changes:
+    * Implemented "files preupdate" tag script method, which gets run
+      before tagged files are installed or changed. (CNY-636)
+
 Changes in 1.0.26:
   o Build Changes:
     * When cooking a group, adding "--debug" to the "cvc cook" command
